--- a/nivel01/front-end-com-react/package.json
+++ b/nivel01/front-end-com-react/package.json
@@ -18,5 +18,8 @@
     "react-dom": "^16.13.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.0"
   }
 }
