--- a/nivel01/front-end-com-react/package.json
+++ b/nivel01/front-end-com-react/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
@@ -25,6 +26,7 @@
     "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.10.3",
     "webpack-dev-server": "^3.11.0"
   }
 }
